# ljh-common

./: MotorController.cpp  func.hpp
02_motor/: MotorController.cpp  func.cpp  func.hpp
02_mutex/: main.cpp  reaction.cpp  reaction.hpp
PCL/pcl_view/: CMakeLists.txt  main.cpp
armor_identify_task/armor_plate_identify/: CMakeLists.txt  package.xml
armor_identify_task/armor_plate_identify/include/: HSVDetector.hpp
armor_identify_task/armor_plate_identify/src/: HSVDetector.cpp  locator.cpp
armor_identify_task/nn_armor_plate_identify/: CMakeLists.txt  package.xml
armor_identify_task/nn_armor_plate_identify/src/: nn_locator.cpp
camera_calib/: params.yml
camera_calib/launch/: launch.py
camera_calib/src/: captor.cpp
camera_calibration/camera_calib/: CMakeLists.txt  package.xml
camera_calibration/camera_calib/src/: calculator.cpp  decomposer.cpp  marker.cpp
camera_calibration/reference_msgs/include/reference_msgs/reference_msgs/msg/: pixel.h  pixel.hpp  reference.h  reference.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  world_coordinate.h  world_coordinate.hpp
camera_calibration/reference_msgs/include/reference_msgs/reference_msgs/msg/detail/: pixel__builder.hpp  pixel__description.c  pixel__functions.c  pixel__functions.h  pixel__rosidl_typesupport_fastrtps_c.h  pixel__rosidl_typesupport_fastrtps_cpp.hpp  pixel__rosidl_typesupport_introspection_c.h  pixel__rosidl_typesupport_introspection_cpp.hpp  pixel__struct.h  pixel__struct.hpp  pixel__traits.hpp  pixel__type_support.c  pixel__type_support.cpp  pixel__type_support.h  pixel__type_support.hpp  reference__builder.hpp  reference__description.c  reference__functions.c  reference__functions.h  reference__rosidl_typesupport_fastrtps_c.h  reference__rosidl_typesupport_fastrtps_cpp.hpp  reference__rosidl_typesupport_introspection_c.h  reference__rosidl_typesupport_introspection_cpp.hpp  reference__struct.h  reference__struct.hpp  reference__traits.hpp  reference__type_support.c  reference__type_support.cpp  reference__type_support.h  reference__type_support.hpp  world_coordinate__builder.hpp  world_coordinate__description.c  world_coordinate__functions.c  world_coordinate__functions.h  world_coordinate__rosidl_typesupport_fastrtps_c.h  world_coordinate__rosidl_typesupport_fastrtps_cpp.hpp  world_coordinate__rosidl_typesupport_introspection_c.h  world_coordinate__rosidl_typesupport_introspection_cpp.hpp  world_coordinate__struct.h  world_coordinate__struct.hpp  (+5 more)
camera_calibration/reference_msgs/share/ament_index/resource_index/rosidl_interfaces/: reference_msgs
camera_calibration/reference_msgs/share/reference_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
camera_calibration/reference_msgs/share/reference_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_reference_msgs__rosidl_generator_cExport-noconfig.cmake  export_reference_msgs__rosidl_generator_cExport.cmake  export_reference_msgs__rosidl_generator_cppExport.cmake  export_reference_msgs__rosidl_generator_pyExport-noconfig.cmake  export_reference_msgs__rosidl_generator_pyExport.cmake  export_reference_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_reference_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_reference_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_reference_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  reference_msgsConfig.cmake  reference_msgs__rosidl_typesupport_cExport-noconfig.cmake  reference_msgs__rosidl_typesupport_cExport.cmake  reference_msgs__rosidl_typesupport_cppExport-noconfig.cmake  reference_msgs__rosidl_typesupport_cppExport.cmake  reference_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  reference_msgs__rosidl_typesupport_introspection_cExport.cmake  reference_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  reference_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
camera_calibration/reference_msgs/share/reference_msgs/msg/: Pixel.idl  Pixel.json  Pixel.msg  Reference.idl  Reference.json  Reference.msg  WorldCoordinate.idl  WorldCoordinate.json  WorldCoordinate.msg
coordinate_conversion/: CMakeLists.txt  package.xml
coordinate_conversion/src/: converter.cpp  inte_locator.cpp
cv-color/src/: main.cpp
cv_color/: CMakeLists.txt
cv_color/includes/: CubeColorDetector.hpp
cv_color/tools/: CubeColorDetector.cpp
cv_imageEnhencement/: imageEnhencement.cpp
opencv/Chapters/: Chapter1_1.cpp  Chapter1_2.cpp  Chapter1_3.cpp  Chapter2.cpp  Chapter3.cpp  Chapter4.cpp  Chapter5.cpp  Chapter6.cpp  Chapter7.cpp  Chapter8.cpp
ros-tf2/: setup.py
ros2-tf2/: package.xml
ros2-tf2/learning_tf2_py/: static_turtle_tf2_broadcaster.py  turtle_tf2_broadcaster.py
ros2-tracker/founder_msgs/: CMakeLists.txt  package.xml
ros2-tracker/founder_msgs/msg/: EkfParameters.msg  FounderMessage.msg
ros2-tracker/tracker/: CMakeLists.txt  package.xml  params.yml
ros2-tracker/tracker/src/: Founder.cpp  Tracker.cpp
startup/: .bash_profile
voxel_grid_filter/: CMakeLists.txt  main.cpp
